test/sema/methods/self_member.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S {}

fn main() {
  mut s = S{};

  // CHECK: [[# @LINE + 1 ]]:5: error: failed to find member 'Self'
  s.Self;

  // CHECK: [[# @LINE + 1 ]]:6: error: failed to find member 'Self'
  S::Self;
}
